--- a/views/taco-stands/new.ejs
+++ b/views/taco-stands/new.ejs
@@ -17,6 +17,8 @@
   <label for="hours">Hours (day-day, hour-hour): </label>
   <input type="text" name="hours" id="hours">
 
+  <button type="submit">Add Taco Stand</button>
+
 </form>
 
 
