--- a/views/taco-stands/show.ejs
+++ b/views/taco-stands/show.ejs
@@ -1,9 +1,9 @@
 <%- include('../partials/header.ejs') %>
-<h2>
+<h3> Rating: 
   <% for (let i = 0; i < stand.rating; i++) { %>
     &#127790;
   <% } %>
-</h2>
+</h3>
 
 <ul>
   <li>
@@ -17,8 +17,8 @@
   </li>
 </ul>
 
-
-
-<a href="/taco-stands/new">Add a new Taco Stand</a>
+<form action="/taco-stands/<%= stand._id %>?_method=DELETE" method="POST">
+  <button type="submit">Delete Taco Stand</button>
+</form>
 
 <%- include('../partials/footer.ejs') %>
