--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
     <a href="/taco-stands">All Taco Stands</a>
     <!-- Above renders whether signed in or not -->
      <% if (user) { %>
+      <a href="/users">Our Community</a>
       <a href="/auth/sign-out">SIGN OUT</a>
       <span><%= user.username._id %></span>
      <% } else { %>
