Complete full CRUD for Taco Stands

--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -5,7 +5,7 @@
   <input type="text" name="username" id="username" />
   <label for="password">Password:</label>
   <input type="password" name="password" id="password" />
-  <button type="submit">SIGN IN</button>
+  <button type="submit">Log In</button>
 </form>
 
 <%- include('../partials/footer.ejs')%>
