--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<% if (stand.length) { %>
+<% if (stand) { %>
   <ul>
     <% stand.forEach((element) => { %>
       <li>
