Organize and update SHOW functionality

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
      <% if (user) { %>
       <a href="/users">Our Community</a>
       <a href="/auth/sign-out">Sign Out</a>
-      <span><%= user.username._id %></span>
+      <span><%= user.username %></span>
      <% } else { %>
       <a href="/auth/sign-in">Log In</a>
       <a href="/auth/sign-up">Sign Up</a>
