--- a/views/taco-stands/new.ejs
+++ b/views/taco-stands/new.ejs
@@ -14,6 +14,9 @@
   <label for="price">Price ($-$$$): </label>
   <input type="text" name="price" id="price">
 
+  <label for="day">Days Open: </label>
+  <input type="text" name="day" id="day" value="<%= stand.day %>">
+
   <label for="hours">Hours (day-day, hour-hour): </label>
   <input type="text" name="hours" id="hours">
 
