Complete CRUD for TacoStand

--- a/views/taco-stands/new.ejs
+++ b/views/taco-stands/new.ejs
@@ -15,10 +15,10 @@
   <input type="text" name="price" id="price">
 
   <label for="day">Days Open: </label>
-  <input type="text" name="day" id="day" value="<%= stand.day %>">
+  <input type="text" name="day" id="day">
 
-  <label for="hours">Hours (day-day, hour-hour): </label>
-  <input type="text" name="hours" id="hours">
+  <label for="hour">Hours Open: </label>
+  <input type="text" name="hour" id="hour">
 
   <button type="submit">Add Taco Stand</button>
 
