After class Friday commit

--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -4,7 +4,7 @@
   <ul>
     <% stand.forEach((element) => { %>
       <li>
-       <%= element.name %>
+       <a href="/taco-stands/<%= stand._id %>"><%= element.name %></a>
       </li>
     <% }); %>
   </ul>
