--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -3,12 +3,15 @@
 <form action="/taco-stands/<%= stand._id %>/reviews?_method=PUT" method="POST">
   
   <% stand.reviews.forEach(review => { %>
-  <label for="rating">Rating (0-5): </label>
-  <input type="text" name="rating" id="rating" value="<%=review.rating%>">
+  <input type="hidden" name="reviewId" value="<%= review._id %>">
   
-    <label for="comment">Comment:</label>
-    <textarea name="comment" id="comment" required><%=review.comment %></textarea><br>
-    <% }) %>
+
+  <label for="rating">Rating (0-5): </label>
+  <input type="number" name="rating" id="rating" value="<%=review.rating%>" min="0" max="5">
+  
+  <label for="comment">Comment:</label>
+  <textarea name="comment" id="comment" required><%=review.comment %></textarea><br>
+  <% }) %>
 
   <button type="submit">Update Review</button>
 
