--- a/views/taco-stands/show.ejs
+++ b/views/taco-stands/show.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/header.ejs') %>
-<div><%= ratingD %></div>
+
+<div><%= ratingD %> (<%=average%>, <%= avgRating.length %> reviews)</div>
 
 <% if (user && currentStand.owner.toString() === user._id.toString()) { %>
   <a href="/taco-stands/<%= currentStand._id %>/edit">Edit Taco Stand</a>
