--- a/views/taco-stands/show.ejs
+++ b/views/taco-stands/show.ejs
@@ -1,6 +1,10 @@
 <%- include('../partials/header.ejs') %>
 
-<div><%= ratingD %> (<%=average%>, <%= avgRating.length %> reviews)</div>
+<% if (avgRating.length > 0) { %>
+  <div><%= ratingD %> (<%=average%>, <%= avgRating.length %> reviews)</div>
+  <% } else { %>
+  <div>(No ratings yet)</div>
+<% } %>
 
 <% if (user && currentStand.owner.toString() === user._id.toString()) { %>
   <a href="/taco-stands/<%= currentStand._id %>/edit">Edit Taco Stand</a>
