Fix update logic redirect

--- a/views/taco-stands/edit.ejs
+++ b/views/taco-stands/edit.ejs
@@ -38,7 +38,7 @@
     <input type="radio" name="toPeriod" id="toam" value="am"
     <%= stand.hour && stand.hour[3] === 'am' ? 'checked' : '' %>> am
     <input type="radio" name="toPeriod" id="topm" value="pm"
-    <%= stand.hour && stand.hour[3] === 'am' ? 'checked' : '' %>> pm
+    <%= stand.hour && stand.hour[3] === 'pm' ? 'checked' : '' %>> pm
   </div>
 
   <button type="submit">Update Taco Stand</button>
