Complete stand and review CRUD

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,6 +35,11 @@ nav a {
   }
 }
 
+button {
+  border-radius: 8px;
+  margin: 1px;
+}
+
 nav span {
   font-size: 1.5vmin;
   color: lightslategray;
