--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PopTaco</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/nav.css">
   <link rel="icon" type="image/jpg" href="../assets/images/logo.jpg" >
 </head>
 
