--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,7 @@
     </main>
-    <footer>&copy; 2024 Steve Kaats</footer>
+    <footer>&copy; 2024 Steve Kaats
+      <img src="/assets/images/logo.jpg" alt="PopTaco's logo of a taco" id="footer-logo">
+      Stay spicy!
+    </footer>
   </body>
 </html>
