--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,14 @@
     </main>
-    <footer>&copy; 2024 Steve Kaats
-      <img src="/assets/images/logo.jpg" alt="PopTaco's logo of a taco" id="footer-logo">
-      Stay spicy!
+    <footer>
+      <div class="left">
+        &copy; 2024 Steve Kaats
+      </div>
+      <div class="center">
+        <img src="/assets/images/logo.jpg" alt="PopTaco's logo of a taco" id="footer-logo">
+      </div>
+      <div class="right">
+          Stay spicy!
+      </div>
     </footer>
   </body>
 </html>
