--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PopTaco</title>
   <link rel="stylesheet" href="/css/nav.css">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
   <link rel="icon" type="image/jpg" href="../assets/images/logo.jpg" >
 </head>
 
 <body>
   <nav>
-    <a href="/">🏠</a>
+    <a href="/">🌮 PopTaco</a>
     <div>
     <a href="/taco-stands">All Taco Stands</a>
     <!-- Above renders whether signed in or not -->
@@ -22,7 +23,7 @@
      <% } else { %>
       <a href="/auth/sign-in">Log In</a>
       <a href="/auth/sign-up">Sign Up</a>
-      </div>
+    </div>
      <% } %>
   </nav>
   <main>
