--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,9 +1,55 @@
-
-
-
-body {
-  margin: 0;
-  height: 100vh;
+.container {
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto;
+  grid-auto-flow: row dense;
+  justify-items: center;
+  align-items: center;
+  height: 60%;
+}
+
+h1 {
+  padding: 1px;
+  margin: 20px;
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
+
+#logo {
+  max-width: 50vh;
+  height: auto;
+}
+
+@media (max-width: 640px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+
+@media (max-width: 480px) {
+  .container {
+    grid-template-columns: 1fr; /* Single column */
+  }
+}
+
+button {
+  cursor: pointer;
+  padding: 1vh;
+  margin: 0;
+  font-size: 20px;
+  border-radius: 10px;
+}
+
+#tagline {
+  grid-column: 2;
+  grid-row: 2;
+  text-align: center;
+}
+
+button:hover {
+  background-color: #e0e0e0;
 }
