--- a/public/css/home.css
+++ b/public/css/home.css
@@ -32,7 +32,7 @@ p {
 
 @media (max-width: 480px) {
   .container {
-    grid-template-columns: 1fr; /* Single column */
+    grid-template-columns: 1fr;
   }
 }
 
